# ODC

./: .clang-format  .gitignore  CMakeLists.txt  CTestConfig.cmake  Jenkinsfile  Jenkinsfile.nightly  ODCTest.cmake  README.md  ReleaseNotes.md
cli-server/: CMakeLists.txt  main.cpp
cli-server/src/: CliControlService.cpp  CliControlService.h  main.cpp  main.cpp.in
cmake/: FindgRPC.cmake  Findreadline.cmake  ODCConfig.cmake.in  ODCUtils.cmake
core/: CMakeLists.txt  CliServiceHelper.h  ControlService.cpp  ControlService.h  DDSSubmit.cpp  DDSSubmit.h  InfoLogger.h  Logger.h  LoggerSeverity.h  Process.h  Restore.cpp  Restore.h
core/src/: AsioAsyncOp.h  AsioBase.h  BuildConstants.h.in  CliHelper.cpp  CliHelper.h  CliServiceHelper.h  CmdsFile.cpp  CmdsFile.h  ControlService.cpp  ControlService.h  DDSSubmit.cpp  DDSSubmit.h  Def.h  Error.cpp  Error.h  InfoLogger.h  Logger.h  LoggerSeverity.h  MiscUtils.h  PluginManager.cpp  PluginManager.h  Process.h  Semaphore.cpp  Semaphore.h  Stats.cpp  Stats.h  TimeMeasure.h  Topology.h  Traits.h  Version.h.in
custom-commands/: CMakeLists.txt
dds-control-server/: CMakeLists.txt
dds-control-server/src/: DDSControlServer.cpp  DDSControlServer.h  DDSControlService.cpp  DDSControlService.h  TimeMeasure.h  main.cpp  main.cpp.in
docs/: epn.md  faq.md  rp.md  rt.md
examples/: CMakeLists.txt  README.md  cmds.cfg.in  epn-topo.cpp  ex-cmds.cfg.in  ex-dd-topology.xml  ex-dds-topology-crashing.xml.in  ex-dds-topology-groupname-req-crashing.xml.in  ex-dds-topology-groupname-req-ncores.xml.in  ex-dds-topology-groupname-req.xml.in  ex-dds-topology-infinite.xml.in  ex-dds-topology-submit-failure-test.xml.in  ex-dpl-topology.xml  ex-env.sh.in  ex-epn-2.xml  ex-epn.xml  ex-qc-topology.xml  ex-slurm-calib.cfg  ex-slurm-online.cfg  ex-topo-groupname-crashing-expendable-task.xml.in  ex-topo-groupname-crashing-no-calib.xml.in  ex-topo-groupname-crashing-small.xml.in  ex-topo-groupname-crashing.xml.in  ex-topo-groupname-ncores.xml.in  ex-topo-groupname-req-crashing.xml.in  ex-topo-groupname-req.xml.in  ex-topo-groupname.xml.in  odc-epn-topo.cpp  odc-rp-example.sh  odc-topo.cpp  processor.cpp  sampler.cpp  sink.cpp
examples/src/: epn-topo.cpp  odc-topo.cpp  processor.cpp  sampler.cpp  sink.cpp
fairmq/: CMakeLists.txt
fairmq/commands/: CMakeLists.txt  CustomCommandsFormatDef.h.in
fairmq/commands/src/: CustomCommands.cpp  CustomCommands.h  CustomCommandsFormat.fbs  CustomCommandsFormatDef.h.in
fairmq/fairmq/: CMakeLists.txt  Topology.h
fairmq/fairmq/src/: AsioAsyncOp.h  Topology.h
fairmq/plugin/: CMakeLists.txt  ODC.cpp
fairmq/plugin/src/: ODC.cpp  ODC.h
grpc-client/: CMakeLists.txt  GrpcControlClient.cpp  main.cpp
grpc-client/src/: GrpcControlClient.cpp  GrpcControlClient.h  main.cpp  main.cpp.in
grpc-proto/: CMakeLists.txt  odc.proto
grpc-server/: CMakeLists.txt  GrpcAsyncService.cpp  GrpcAsyncService.h  GrpcService.cpp  GrpcService.h  GrpcSyncService.h  main.cpp
grpc-server/src/: GrpcAsyncService.cpp  GrpcAsyncService.h  GrpcControlServer.cpp  GrpcControlServer.h  GrpcControlService.cpp  GrpcControlService.h  GrpcService.cpp  GrpcService.h  GrpcSyncService.cpp  GrpcSyncService.h  main.cpp  main.cpp.in
odc/: AsioAsyncOp.h  AsioBase.h  BuildConstants.h.in  CMakeLists.txt  CliControlService.cpp  CliControlService.h  CliController.h  CliControllerHelper.h  CliHelper.cpp  CliHelper.h  CliServer.cpp  CliServiceHelper.h  CmdsFile.cpp  CmdsFile.h  ControlService.cpp  ControlService.h  Controller.cpp  Controller.h  DDSSubmit.h  Def.h  Error.cpp  Error.h  InfoLogger.h  Logger.h  LoggerSeverity.h  MiscUtils.h  Params.h  PluginManager.cpp  PluginManager.h  Process.h  Requests.h  Restore.cpp  Restore.h  Semaphore.cpp  Semaphore.h  Session.h  Stats.cpp  Stats.h  TimeMeasure.h  Timer.h  (+11 more)
odc/cc/: CMakeLists.txt  CustomCommands.cpp  CustomCommands.h  CustomCommandsFormat.fbs  CustomCommandsFormatDef.h.in
odc/grpc/: AsyncController.cpp  AsyncController.h  CMakeLists.txt  Client.cpp  Client.h  ControlClient.h  Controller.h  GrpcAsyncService.cpp  GrpcAsyncService.h  GrpcControlClient.cpp  GrpcControlClient.h  GrpcController.h  GrpcService.cpp  GrpcService.h  GrpcSyncService.h  Server.cpp  Server.h  SyncController.h  odc-grpc-client.cpp  odc-grpc-server.cpp  odc.proto
plugins/fmq/: CMakeLists.txt  ODC.cpp  ODC.h
plugins/rp-epn/: CMakeLists.txt  EpncClient.h  epnc.proto  odc-rp-epn.cpp
plugins/rp-epn-slurm/: CMakeLists.txt  README.md  odc-rp-epn-slurm.cpp
plugins/rp-epn/proto/: CMakeLists.txt  epnc.proto
plugins/rp-epn/src/: EpncClient.cpp  EpncClient.h  odc-rp-epn.cpp
plugins/rp-same/: CMakeLists.txt  odc-rp-same.cpp
plugins/rp-same/src/: odc-rp-same.cpp
proto/: CMakeLists.txt  ddscontrol.proto  main.proto  odc.proto
sample-client/: CMakeLists.txt
sample-client/src/: DDSControlClient.cpp  DDSControlClient.h  main.cpp  main.cpp.in
sample-task/: CMakeLists.txt
sample-task/src/: main.cpp
test/: sample_topo.xml
tests/: CMakeLists.txt  README.md  batch_cmds.cfg  batch_cmds_nmin.cfg.in  batch_cmds_with_script.cfg.in  cc-tests.cpp  cmd_set_1.cfg.in  cmd_set_1_run.cfg.in  cmd_set_2.cfg.in  cmd_set_3_with_script.cfg.in  cmd_set_4_extract.cfg.in  cmds.cfg.in  cmds_old_defaults.cfg.in  cmds_test_1.cfg  cmds_with_script.cfg.in  nmin.cfg.in  odc-fixtures.h  odc-tests-topo.xml  odc-tests.cpp  odc_custom_commands_lib-tests.cpp  odc_fairmq_lib-fixtures.h  parameters-tests.cpp  requirements-tests.cpp  run_tests.sh.in  utils-tests.cpp
tests/src/: odc_core_lib-fixtures.h  odc_core_lib-tests.cpp  odc_custom_commands-tests.cpp  odc_custom_commands_lib-tests.cpp  odc_fairmq_lib-tests.cpp
tests/topos/: nmin_0.xml.in  nmin_col_outside_group.xml.in  nmin_eq_n.xml.in  nmin_gt_n.xml.in  nmin_lt_n.xml.in  nmin_lt_n_hanging.xml.in  nmin_lt_n_hanging_before_idle.xml.in  nmin_lt_n_hanging_before_idle_failure.xml.in  nmin_lt_n_hanging_in_init.xml.in  nmin_multiple_cols_per_group.xml.in  nmin_negative.xml.in  nmin_not_defined.xml.in  nmin_tasks_outside_col.xml.in  nmin_tasks_outside_group.xml.in  odc-tests-topo.xml
utils/: exec.py  update_format.sh
(+27 files in other folders)
